# spark-integration-hub-k8s-operator

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  open-pr.sh  pyproject.toml  requirements.txt  tox.ini
.github/: renovate.json5
.github/workflows/: ci.yaml  release.yaml  tiobe_scan.yaml
docs/: landing.md  overview.md
lib/charms/data_platform_libs/v0/: object_storage.py
lib/charms/spark_integration_hub_k8s/v0/: spark_service_account.py
src/: charm.py  constants.py  workload.py
src/common/: k8s.py  utils.py  workload.py
src/core/: config.py  context.py  domain.py  workload.py
src/events/: azure_storage.py  base.py  configuration_actions.py  integration_hub.py  logging.py  provider.py  pushgateway.py  s3.py
src/managers/: azure_storage.py  integration_hub.py  k8s.py  s3.py
src/relations/: spark_sa.py
tests/integration/: conftest.py  helpers.py  test_charm.py  test_observability.py  test_provider.py  test_trust.py
tests/integration/app-charm/: actions.yaml  config.yaml  metadata.yaml
tests/integration/app-charm/lib/charms/data_platform_libs/v0/: data_interfaces.py
tests/integration/app-charm/lib/charms/spark_integration_hub_k8s/v0/: spark_service_account.py
tests/integration/app-charm/src/: charm.py
tests/integration/setup/: run_spark_job.sh  setup_minio.sh
tests/interface/: conftest.py
tests/unit/: conftest.py  test_charm.py  test_lib.py
