# Copyright 2024 Canonical Ltd.
# See LICENSE file for licensing details.

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0.0"

[tool.poetry.dependencies]
python = ">3.10,<4.0"
ops = ">=3.0.0"
# NOTE(boto): 1.36+ incompatible with minio because of MD5 checksum
boto3 = ">=1.38.36,<1.39"
lightkube = "0.17.2"

[tool.poetry.group.charm-libs.dependencies]
ops = "^2.13.0"
poetry-core = "*"
# data_platform_libs.v0.data_interface.py
pydantic = "^1.10.17, <2"
# loki_k8s/v1/loki_push_api.py
pyyaml = "*"
# loki_k8s/v1/loki_push_api.py
cosl = "*"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
ruff = ">=0.11.13"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = ">=0.11.13"
codespell = ">=2.4.1"
mypy = "^1.16.0"
types-boto3 = { extras = ["essentials"], version = ">=1.38.36,<1.39" }
types-pyyaml = "^6.0.12.20250402"
types-pygments = "^2.19.0.20250305"

[tool.poetry.group.unit]
optional = true

[tool.poetry.group.unit.dependencies]
pytest = "<8.4.1"
coverage = { extras = ["toml"], version = ">7.0" }
ops = { extras = ["testing"], version = "^3.0.0" }

[tool.poetry.group.integration]
optional = true

[tool.poetry.group.integration.dependencies]
pytest = ">=8.4.0"
coverage = { extras = ["toml"], version = ">7.0" }
tenacity = "^9.1.2"
spark8t = "^0.0.12"
jubilant = "^1.2.0"

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D401",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",
]
ignore = ["E501", "D107"]
per-file-ignores = { "tests/*" = ["D100", "D101", "D102", "D103", "D104", "E999"], "src/literals.py" = ["D101"], "src/*/__init__.py" = ["D104"] }
mccabe.max-complexity = 10

[tool.mypy]
[[tool.mypy.overrides]]
module = [
  "charms.data_platform_libs.*",
  "charms.prometheus_pushgateway_k8s.*",
  "charms.loki_k8s.*",
  "charms.spark_integration_hub_k8s.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = ["unstable"]

[tool.pyright]
include = ["src"]
extraPaths = ["./lib", "src"]
pythonVersion = "3.10"
pythonPlatform = "All"
